--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,4 +51,11 @@
         <item name="android:textColor">@color/gray4</item>
         <item name="android:justificationMode">inter_word</item>
     </style>
+
+    <style name="ErrorText">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/assistant_bold</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 </resources>
