--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,8 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
 
-    android:paddingHorizontal="20dp"
+    android:layout_marginHorizontal="20dp"
     tools:context=".ACTIVITIES.Register">
 
     <TextView
