--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,10 @@
         <item name="android:fontFamily">@font/assistant_bold</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
+
+        <!-- Remove drop shadow -->
+        <item name="elevation">0dp</item>
+        <item name="android:stateListAnimator">@null</item>
     </style>
 
     <style name="SecondaryButton" parent="Widget.AppCompat.Button">
@@ -16,6 +20,10 @@
         <item name="android:fontFamily">@font/assistant_bold</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
+
+        <!-- Remove drop shadow -->
+        <item name="elevation">0dp</item>
+        <item name="android:stateListAnimator">@null</item>
     </style>
 
     <style name="EditTextStyle">
