--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TASHTIT" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.ShareUp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
 
@@ -9,5 +9,5 @@
 
     </style>
 
-    <style name="Theme.TASHTIT" parent="Base.Theme.TASHTIT" />
+    <style name="Theme.ShareUp" parent="Base.Theme.ShareUp" />
 </resources>
