feat: make application background white by default

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
 
         <!-- Splash transparent -->
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@color/white</item>
 
     </style>
 
