--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -13,7 +13,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="50dp"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:background="@drawable/circle_background"
         android:clipToOutline="true"
         android:src="@android:drawable/btn_star_big_on"
