--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
             android:id="@+id/ivProfilePicture"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:src="@android:drawable/btn_star_big_on"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
