--- a/app/src/main/res/layout/single_post.xml
+++ b/app/src/main/res/layout/single_post.xml
@@ -20,7 +20,7 @@
             android:id="@+id/ivProfilePicture"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:src="@android:drawable/btn_star_big_on"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
