--- a/app/src/main/res/layout/single_post.xml
+++ b/app/src/main/res/layout/single_post.xml
@@ -5,37 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+    <LinearLayout
+        android:id="@+id/llProfileContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        app:cardCornerRadius="50dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/ivProfilePicture"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:scaleType="centerCrop"
-            android:src="@android:drawable/btn_star_big_on"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.cardview.widget.CardView>
+            app:cardCornerRadius="50dp">
 
-    <TextView
-        android:id="@+id/tvPostUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Username"
-        style="@style/Subheading"
-        android:layout_marginLeft="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/cardView"
-        app:layout_constraintStart_toEndOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="@+id/cardView" />
+            <ImageView
+                android:id="@+id/ivProfilePicture"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:scaleType="centerCrop"
+                android:src="@android:drawable/btn_star_big_on" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tvPostUsername"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Username"
+            style="@style/Subheading"
+            android:layout_marginLeft="10dp" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/ivPostPicture"
@@ -46,7 +48,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/llProfileContainer"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageButton
