feat: update default profile picture in profile and post layouts

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -16,7 +16,7 @@
         android:scaleType="centerCrop"
         android:background="@drawable/circle_background"
         android:clipToOutline="true"
-        android:src="@android:drawable/btn_star_big_on"
+        android:src="@drawable/ic_deafult_profile_picture"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintEnd_toEndOf="parent"
