--- a/app/src/main/res/layout/single_post.xml
+++ b/app/src/main/res/layout/single_post.xml
@@ -27,7 +27,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:scaleType="centerCrop"
-                android:src="@android:drawable/btn_star_big_on" />
+                android:src="@drawable/ic_deafult_profile_picture" />
         </androidx.cardview.widget.CardView>
 
         <TextView
