--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -129,6 +129,7 @@
         android:id="@+id/tvProfileUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:text="Username"
         style="@style/Subheading"
         app:layout_constraintStart_toStartOf="@+id/cardView"
@@ -220,12 +221,12 @@
         android:id="@+id/rvProfilePosts"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="70dp"
         android:scrollbars="vertical"
-        android:paddingTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileButtonsOwn" />
+        app:layout_constraintTop_toBottomOf="@+id/tvBio" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
