--- a/app/src/main/res/menu/bottom_nav_bar.xml
+++ b/app/src/main/res/menu/bottom_nav_bar.xml
@@ -3,14 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/home_24px"
         android:title="Home" />
     <item
-        android:id="@+id/navigation_members"
-        android:icon="@drawable/ic_team"
-        android:title="Members" />
+        android:id="@+id/navigation_search"
+        android:icon="@drawable/search_24px"
+        android:title="Search" />
     <item
-        android:id="@+id/navigation_cities"
-        android:icon="@drawable/ic_city"
-        android:title="Cities" />
+        android:id="@+id/navigation_upload"
+        android:icon="@drawable/add_box_24px"
+        android:title="Upload" />
+    <item
+        android:id="@+id/navigation_activity"
+        android:icon="@drawable/favorite_24px"
+        android:title="Activity" />
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/account_circle_24px"
+        android:title="Profile" />
 </menu>
