refactor: rename activities and update context references to include 'Activity' suffix

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginHorizontal="20dp"
-    tools:context=".ACTIVITIES.EditProfile">
+    tools:context=".ACTIVITIES.EditProfileActivity">
 
     <ImageButton
         android:id="@+id/ibEditProfilePicture"
