--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ACTIVITIES.Comments">
+    tools:context=".ACTIVITIES.CommentsActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvComments"
