--- a/app/src/main/res/layout/activity_upload_post.xml
+++ b/app/src/main/res/layout/activity_upload_post.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginHorizontal="20dp"
-    tools:context=".ACTIVITIES.UploadPost">
+    tools:context=".ACTIVITIES.UploadPostActivity">
 
     <ImageView
         android:id="@+id/ibUploadPostPicture"
